--- a/database-mysql/src/main/resources/fxml/mysql-object-tab.fxml
+++ b/database-mysql/src/main/resources/fxml/mysql-object-tab.fxml
@@ -1,47 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 
-<SplitPane fx:id="root" dividerPositions="0.5" xmlns="http://javafx.com/javafx/8.0.211"
-           xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="com.jean.database.mysql.MySQLObjectTabController">
-    <TabPane fx:id="sqlObjectTabPan">
-        <Tab text="对象" closable="false">
-            <TableView fx:id="sqlObjectTableView">
-                <columns>
-                    <TableColumn text="表名"/>
-                    <TableColumn text="自动递增值"/>
-                    <TableColumn text="修改日期"/>
-                    <TableColumn text="数据长度"/>
-                    <TableColumn text="表类型"/>
-                    <TableColumn text="行数"/>
-                    <TableColumn text="注释"/>
-                </columns>
-                <columnResizePolicy>
-                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
-                </columnResizePolicy>
-            </TableView>
-        </Tab>
-    </TabPane>
-    <TabPane>
-        <Tab text="通用" closable="false">
-            <TableView fx:id="generalInfoTableView">
-                <columns>
-                    <TableColumn text="名"/>
-                    <TableColumn text="值"/>
-                </columns>
-                <columnResizePolicy>
-                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
-                </columnResizePolicy>
-            </TableView>
-        </Tab>
-        <Tab text="DDL" closable="false">
-            <TextArea fx:id="ddlInfoTextArea" editable="false" wrapText="true"/>
-        </Tab>
-    </TabPane>
-</SplitPane>
+
+<BorderPane fx:id="root" xmlns="http://javafx.com/javafx/8.0.251" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jean.database.mysql.MySQLObjectTabController">
+   <center>
+          <SplitPane fx:id="splitPane" dividerPositions="0.5" BorderPane.alignment="CENTER">
+           <TabPane fx:id="sqlObjectTabPan">
+               <Tab closable="false" text="对象">
+                   <TableView fx:id="sqlObjectTableView">
+                       <columns>
+                           <TableColumn text="表名" />
+                           <TableColumn text="自动递增值" />
+                           <TableColumn text="修改日期" />
+                           <TableColumn text="数据长度" />
+                           <TableColumn text="表类型" />
+                           <TableColumn text="行数" />
+                           <TableColumn text="注释" />
+                       </columns>
+                       <columnResizePolicy>
+                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                       </columnResizePolicy>
+                   </TableView>
+               </Tab>
+           </TabPane>
+           <TabPane>
+               <Tab closable="false" text="通用">
+                   <TableView fx:id="generalInfoTableView">
+                       <columns>
+                           <TableColumn text="名" />
+                           <TableColumn text="值" />
+                       </columns>
+                       <columnResizePolicy>
+                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                       </columnResizePolicy>
+                   </TableView>
+               </Tab>
+               <Tab closable="false" text="DDL">
+                   <TextArea fx:id="ddlInfoTextArea" editable="false" wrapText="true" />
+               </Tab>
+           </TabPane>
+       </SplitPane>
+   </center>
+</BorderPane>
