--- a/database-gui/src/main/resources/fxml/Scene.fxml
+++ b/database-gui/src/main/resources/fxml/Scene.fxml
@@ -7,12 +7,12 @@
     <top>
         <MenuBar fx:id="menuBar" BorderPane.alignment="CENTER">
             <Menu fx:id="file" mnemonicParsing="false" text="文件">
-                <Menu fx:id="connections" mnemonicParsing="false" text="新建链接" />
+                <Menu fx:id="connection" mnemonicParsing="false" text="新建链接" />
                 <MenuItem fx:id="setting" mnemonicParsing="false" text="设置"/>
                 <MenuItem fx:id="exist" mnemonicParsing="false" text="退出" />
             </Menu>
             <Menu fx:id="view" mnemonicParsing="false" text="查看" />
-            <Menu fx:id="collections" mnemonicParsing="false" text="收藏" />
+            <Menu fx:id="collection" mnemonicParsing="false" text="收藏" />
             <Menu fx:id="tools" mnemonicParsing="false" text="工具" />
             <Menu fx:id="window" mnemonicParsing="false" text="窗口" />
             <Menu fx:id="help" mnemonicParsing="false" text="帮助" />
@@ -20,12 +20,12 @@
     </top>
     <center>
         <SplitPane dividerPositions="0.2" nodeOrientation="LEFT_TO_RIGHT" BorderPane.alignment="CENTER">
-            <TreeView fx:id="databaseTreeView" />
+            <TreeView fx:id="treeView" />
             <TabPane fx:id="objectTabPan" />
         </SplitPane>
     </center>
     <bottom>
-        <HBox fx:id="messageBox" alignment="CENTER_LEFT" maxHeight="30.0" prefHeight="30.0" BorderPane.alignment="CENTER_LEFT">
+        <HBox alignment="CENTER_LEFT" maxHeight="30.0" prefHeight="30.0" BorderPane.alignment="CENTER_LEFT">
          <children>
             <ProgressBar fx:id="progressBar" progress="0.0" />
          </children>
